API updates after testing
